[package]
name = "memory_scanner_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = "0.3.9"
# Windows uniquement
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "memoryapi", "processthreadsapi", "handleapi"] }

# macOS et Linux
[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.1"